@startuml collabowrite_erd
entity "user_data" as user_data {
    *id             : int <<generated>>
    --
    id_supabase     : uuid <<FK, U>>
    username        : varchar
    email           : varchar
    online_status   : varchar
}

entity "document_access_data" as document_access_data {
    *id             : int <<generated>>
    --
    id_document     : uuid <<FK>>
    id_user_data    : int <<FK>>
    access_right    : varchar
    ownership_status: varchar
    created_at      : timestampz
    last_accessed_at: timestampz
}

entity "document" as document {
    *id             : uuid
    --
    document_name   : varchar
    content         : jsonb
    created_at      : timestampz
    last_modified_at: timestampz
}

entity "room" as room {
    *id         : uuid
    --
    id_document : uuid <<FK>>
    created_at  : timestampz
}

entity "player" as player {
    *id             : uuid
    --
    id_user_data    : int <FK, U>>
    id_room         : uuid <<FK>>
    username        : varchar
    cursor_color    : int
    id_peerjs       : varchar
    is_room_master  : bool
    joined_at       : timestampz
}


user_data ||--|| document_access_data
user_data |o--|| player
document_access_data ||--|| document
document ||--|| room
room ||--|{ player


@enduml